--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         ?>
         <br><br>
         <section align="center">
-          <img class="mySlides" src="imagenes/logo-simat.png"
+          <img class="mySlides" src="imagenes/logo_tp.png"
           style=" min-width:200px;" >
         </section>
         </body>
